--- a/mokepon.html
+++ b/mokepon.html
@@ -11,8 +11,8 @@
         <section id="seleccionar-mascota">
             <h2>Elige a tu mascota:</h2>
 
-            <label for="Hipodoge">Hipodoge</label>
-            <input type="radio" name="mascota" id="Hipodoge"/>
+            <label for="hipodoge">Hipodoge</label>
+            <input type="radio" name="mascota" id="hipodoge"/>
             
             <label for="capipepo">Capipepo</label>
             <input type="radio" name="mascota" id="capipepo"/>
