--- a/mokepon.html
+++ b/mokepon.html
@@ -26,8 +26,8 @@
         <section id="seleccionar-ataque">
             <h2>Elige tu ataque</h2>
 
-            <p>Tu mascota tiene <span>3</span> vidas</p>
-            <p>La mascota enemiga tiene <span>3</span> vidas</p>
+            <p>Tu mascota <span id = 'mascota-jugador'></span> tiene <span>3</span> vidas</p>
+            <p>La mascota enemiga <span id = 'mascota-enemigo'></span> tiene <span>3</span> vidas</p>
 
             <p>
                 <button id="boton-fuego">Fuego 🔥</button>
