--- a/mokemon/mokepon.html
+++ b/mokemon/mokepon.html
@@ -26,8 +26,8 @@
         <section id="seleccionar-ataque">
             <h2>Elige tu ataque</h2>
 
-            <p>Tu mascota <span id = 'mascota-jugador'></span> tiene <span>3</span> vidas</p>
-            <p>La mascota enemiga <span id = 'mascota-enemigo'></span> tiene <span>3</span> vidas</p>
+            <p>Tu mascota <span id = 'mascota-jugador'></span> tiene <span id = 'vidas-jugador'>3</span> vidas</p>
+            <p>La mascota enemiga <span id = 'mascota-enemigo'></span> tiene <span id = 'vidas-enemigo'>3</span> vidas</p>
 
             <p>
                 <button id="boton-fuego">Fuego 🔥</button>
@@ -37,8 +37,6 @@
         </section>
 
         <section id="mensajes">
-            <!--El mensaje dinámico lo haremos en JS-->
-            <p>Tu mascota atacó con FUEGO, la mascota enemiga atacó con TIERRA - ¡GANASTE!🎉🎉🎉</p>
         </section>
 
         <section id="reiniciar">
